Use QApplication (for SVG files with text)

Patch by Martin Jansa, thanks!
BUG: 196634

svn path=/trunk/KDE/kdebase/runtime/; revision=982740