pics/ksvgtopng.cpp
@@ -1,3 +1,4 @@
+#include <QtGui/QApplication>
 #include <QtGui/QImage>
 #include <QtCore/QString>
 
@@ -10,6 +11,11 @@ using std::endl;
 
 int main(int argc, char **argv)
 {
+	// Initialize Qt application, otherwise for some svg files it can segfault with:
+	// ASSERT failure in QFontDatabase: "A QApplication object needs to be 
+	// constructed before FontConfig is used."
+	QApplication app(argc, argv);
+
 	if(argc < 5)
 	{
 		cout << "Usage : ksvgtopng width height svgfilename outputfilename" << endl;
